# Diffusion-Playground

./: CMakeLists.txt  README.md  plot.py
Monte Carlo Simulation of 2D Diffusion/: CMakeLists.txt
Monte Carlo Simulation of 2D Diffusion/src/: main.cpp
apps/: diffusion_explicit.cpp  main.cpp  monte_carlo copy.cpp  monte_carlo.cpp
include/: diffusion_explicit.h  monte_carlo copy.h  monte_carlo.h
lib/camera/: CMakeLists.txt
lib/camera/include/: camera.h
lib/engine/: CMakeLists.txt
lib/engine/include/: engine.h
lib/engine/src/: engine.cpp
lib/file/: CMakeLists.txt
lib/file/include/: file.h
lib/file/src/: file.cpp
lib/grid/: CMakeLists.txt
lib/grid/include/: grid.h  scalar_grid.h
lib/grid/src/: scalar_grid.cpp
lib/grid_renderer/: CMakeLists.txt
lib/grid_renderer/include/: grid_renderer.h
lib/grid_renderer/src/: grid_renderer.cpp
lib/particle/: CMakeLists.txt
lib/particle/include/: particle.h
lib/particle/src/: particle.cpp
lib/post_state_processor/include/: post_state_processor.h
lib/post_state_processor/src/: post_state_processor.cpp
lib/recorder/: CMakeLists.txt
lib/recorder/include/: recorder.h
lib/recorder/src/: recorder.cpp
lib/sdl_system/: CMakeLists.txt
lib/sdl_system/include/: sdl_system.h
lib/sdl_system/src/: sdl_system.cpp
lib/simulation_controller/: CMakeLists.txt
lib/simulation_controller/include/: simulation_controller.h
lib/simulation_controller/src/: simulation_controller.cpp
lib/simulation_manager/: CMakeLists.txt
lib/simulation_manager/include/: simulation_manager.h
lib/simulation_manager/src/: simulation_manager.cpp
lib/solver/: CMakeLists.txt
lib/solver/include/: discrete_random_walk_solver.h  finite_difference_solver.h  solver.h  walker.h
lib/solver/src/: discrete_random_walk_solver.cpp  finite_difference_solver.cpp
lib/timer/: CMakeLists.txt
lib/timer/include/: timer.h
lib/timer/src/: timer.cpp
lib/window/: CMakeLists.txt
lib/window/include/: window.h
lib/window/src/: window.cpp
plot/: plot.py
src/: main.cpp
